# hexlet-my-workflow

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml
.github/workflows/: lint.yml  tests.yml
src/: module.py
src/scripts/: main.py
tests/: test_module.py
